k8s/clientsapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: clientsapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: clientsapi
  template:
    metadata:
      labels:
        app: clientsapi
    spec:
      containers:
      - name: clientsapi
        image: clientsapiacr.azurecr.io/clientsapi:latest
        ports:
        - containerPort: 3000
