k8s/clientsapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: clientsapi-service
spec:
  ports:
    - port: 80
      targetPort: 3000
  selector:
    app: clientsapi
  type: ClusterIP
